# MiniRPG

./: .gitignore  README.txt  game_mech.c  minirpg.c  types.h
c_version/MiniRPG/: game_mech.c  minirpg.c  types.h
cpp_version/: RPG.hpp  minirpg.cpp  types.hpp
cpp_version/MiniRPG/new/: CMakeLists.txt  main.cpp
cpp_version/MiniRPG/new/include/: GameFactory.h  IGame.h  PoppingContainer.h  RPG.h
cpp_version/MiniRPG/new/include/characters/: CharacterBase.h  CharacterContainer.h  CharacterContainerImpl.h  ICharacter.h  ICharacterBuilder.h  IHealSource.h  IMainCharacter.h  NullHealSource.h
cpp_version/MiniRPG/new/include/characters/dnd/: DnDCharacterBuilder.h  DnDCharacterImpl.h  DnDPotion.h  DnDPotionBuilder.h  IDnDCharacter.h
cpp_version/MiniRPG/new/include/io/: IIOHandler.h
cpp_version/MiniRPG/new/include/models/: DnDModel.h  IHealModel.h  ILevelingModel.h  IModel.h  IhealSourceBuilder.h  NullHealModel.h  NullHealSource.h  NullLevelingModel.h
cpp_version/MiniRPG/new/include/models/dnd/: DiceThrower.h  DnDModel.h  DnDPotion.h  DnDPotionBuilder.h
cpp_version/MiniRPG/new/include/types/: CommonTypes.h  DnDTypes.h
cpp_version/MiniRPG/new/src/: GameFactory.cpp  RPG.cpp
cpp_version/MiniRPG/new/src/characters/: CharacterContainer.cpp  CharacterContainerImpl.cpp
cpp_version/MiniRPG/new/src/characters/dnd/: DnDCharacterBuilder.cpp  DnDCharacterImpl.cpp  DnDPotion.cpp  DnDPotionBuilder.cpp
cpp_version/MiniRPG/new/src/models/: DnDModel.cpp
cpp_version/MiniRPG/new/src/models/dnd/: DiceThrower.cpp  DnDModel.cpp  DnDPotion.cpp  DnDPotionBuilder.cpp
(+13 files in other folders)
